<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#A3A3A3"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A3A3A3">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#A3A3A3">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilOperacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:boxBackgroundMode="none"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/etOperacion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="no"
                    tools:text="@string/cantidad"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:soundEffectsEnabled="true"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="#171717"
                    android:textAlignment="textEnd"
                    android:inputType="none"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#3E3E3E"
                android:layout_marginEnd="20dp"
                android:textAlignment="textEnd"
                android:layout_marginTop="20dp"
                android:text="@string/resultado"
                app:layout_constraintTop_toBottomOf="@id/tilOperacion"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnHistory"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@id/tvResultado"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/ic_baseline_history_24"
                android:layout_margin="20dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConversorUnidades"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_baseline_straighten_24"
                app:layout_constraintTop_toBottomOf="@id/tvResultado"
                app:layout_constraintStart_toEndOf="@id/btnHistory"
                app:layout_constraintEnd_toStartOf="@id/btnModoCientifico"
                android:layout_margin="20dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnModoCientifico"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_baseline_calculate_24"
                app:layout_constraintTop_toBottomOf="@id/tvResultado"
                app:layout_constraintStart_toEndOf="@id/btnConversorUnidades"
                android:layout_margin="20dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBackspace"
                android:layout_width="30sp"
                android:layout_height="30dp"
                android:background="@drawable/ic_baseline_keyboard_backspace_24"
                app:layout_constraintTop_toBottomOf="@id/tvResultado"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="20dp"/>

            <View android:id="@+id/vLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/btnHistory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toTopOf="@id/tablaLayout"
                android:background="@color/black" />

            <TableLayout android:id="@+id/tablaLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/vLine"
                app:layout_constraintStart_toStartOf="parent"
                android:stretchColumns="*"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="30dp">
                <TableRow>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnClear"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/c"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_shadow"
                        android:textColor="#DA0000"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnParentesis"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/parentesis"
                        android:textSize="30sp"
                        android:layout_margin="5dp"
                        android:textStyle="bold"
                        android:background="@drawable/button_shadow"
                        android:textColor="#5CA826"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnPercent"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/por_ciento"
                        android:layout_margin="5dp"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:background="@drawable/button_shadow"
                        android:textColor="#5CA826"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnEnter"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/enter"
                        android:background="@drawable/button_shadow"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="#5CA826"/>
                </TableRow>
                <TableRow>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn7"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/_7"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:background="@drawable/button_shadow"
                        android:layout_margin="5dp"
                        android:textColor="#393939"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn8"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/_8"
                        android:background="@drawable/button_shadow"
                        android:layout_margin="5dp"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textColor="#393939"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn9"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/_9"
                        android:layout_margin="5dp"
                        android:textStyle="bold"
                        android:background="@drawable/button_shadow"
                        android:textSize="30sp"
                        android:textColor="#393939"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnMultiply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_shadow"
                        android:text="@string/por"
                        android:textStyle="bold"
                        android:textColor="#5CA826"
                        android:textSize="30sp" />
                </TableRow>
                <TableRow >
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn4"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/_4"
                        android:textStyle="bold"
                        android:background="@drawable/button_shadow"
                        android:layout_margin="5dp"
                        android:textSize="30sp"
                        android:textColor="#393939"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn5"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/_5"
                        android:layout_margin="5dp"
                        android:textStyle="bold"
                        android:background="@drawable/button_shadow"
                        android:textSize="30sp"
                        android:textColor="#393939"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn6"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/_6"
                        android:layout_margin="5dp"
                        android:textStyle="bold"
                        android:background="@drawable/button_shadow"
                        android:textSize="30sp"
                        android:textColor="#393939"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnLess"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/menos"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_shadow"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="#5CA826"/>
                </TableRow>
                <TableRow >
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn1"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/_1"
                        android:background="@drawable/button_shadow"
                        android:layout_margin="5dp"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textColor="#393939"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn2"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/_2"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:background="@drawable/button_shadow"
                        android:layout_margin="5dp"
                        android:textColor="#393939"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn3"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/_3"
                        android:background="@drawable/button_shadow"
                        android:layout_margin="5dp"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="#393939"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnMore"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/mas"
                        android:background="@drawable/button_shadow"
                        android:layout_margin="5dp"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textColor="#5CA826"/>
                </TableRow>
                <TableRow >
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnMoreLess"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/mas_menos"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:background="@drawable/button_shadow"
                        android:layout_margin="5dp"
                        android:textColor="#393939"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn0"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/_0"
                        android:background="@drawable/button_shadow"
                        android:layout_margin="5dp"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="#393939"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnPoint"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/punto"
                        android:background="@drawable/button_shadow"
                        android:layout_margin="5dp"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="#393939"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnEqual"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/igual"
                        android:background="@drawable/button_mas"
                        android:layout_margin="5dp"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textColor="@color/white"/>
                </TableRow>
            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
